crates/ty_python_types/resources/mdtest/snapshots/invalid_await.md_-_Invalid_await_diagno…_-_Custom_type_with_pos…_(a028edbafe180ca).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: invalid_await.md - Invalid await diagnostics - Custom type with possibly missing `__await__`
mdtest path: crates/ty_python_types/resources/mdtest/diagnostics/invalid_await.md
---

# Python source files

## mdtest_snippet.py

```
1 | from datetime import datetime
2 | 
3 | class PossiblyUnbound:
4 |     if datetime.today().weekday() == 0:
5 |         def __await__(self):
6 |             yield
7 | 
8 | async def main() -> None:
9 |     await PossiblyUnbound()  # error: [invalid-await]
```

# Diagnostics

```
error[invalid-await]: `PossiblyUnbound` is not awaitable
 --> src/mdtest_snippet.py:9:11
  |
8 | async def main() -> None:
9 |     await PossiblyUnbound()  # error: [invalid-await]
  |           ^^^^^^^^^^^^^^^^^
  |
 ::: src/mdtest_snippet.py:5:13
  |
3 | class PossiblyUnbound:
4 |     if datetime.today().weekday() == 0:
5 |         def __await__(self):
  |             --------------- method defined here
6 |             yield
  |
info: `__await__` may be missing
info: rule `invalid-await` is enabled by default

```
