crates/ty_python_types/resources/mdtest/snapshots/legacy_typevars.md_-_Legacy_typevar_creat…_-_Cannot_have_both_bou…_(4ca5f13621915554).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: legacy_typevars.md - Legacy typevar creation diagnostics - Cannot have both bound and constraint
mdtest path: crates/ty_python_types/resources/mdtest/diagnostics/legacy_typevars.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import TypeVar
2 | 
3 | # error: [invalid-legacy-type-variable]
4 | T = TypeVar("T", int, str, bound=bytes)
```

# Diagnostics

```
error[invalid-legacy-type-variable]: A `TypeVar` cannot have both a bound and constraints
 --> src/mdtest_snippet.py:4:5
  |
3 | # error: [invalid-legacy-type-variable]
4 | T = TypeVar("T", int, str, bound=bytes)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `invalid-legacy-type-variable` is enabled by default

```
