crates/ty_python_types/resources/mdtest/snapshots/legacy_typevars.md_-_Legacy_typevar_creat…_-_Invalid_feature_for_…_(72827c64b5c73d05).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: legacy_typevars.md - Legacy typevar creation diagnostics - Invalid feature for this Python version
mdtest path: crates/ty_python_types/resources/mdtest/diagnostics/legacy_typevars.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import TypeVar
2 | 
3 | # error: [invalid-legacy-type-variable]
4 | T = TypeVar("T", default=int)
```

# Diagnostics

```
error[invalid-legacy-type-variable]: The `default` parameter of `typing.TypeVar` was added in Python 3.13
 --> src/mdtest_snippet.py:4:18
  |
3 | # error: [invalid-legacy-type-variable]
4 | T = TypeVar("T", default=int)
  |                  ^^^^^^^^^^^
  |
info: rule `invalid-legacy-type-variable` is enabled by default

```
